# angelica

./: CMakeLists.txt  README.md
active/: active.cpp  active.h  active_server.cpp  active_server.h  activeserver.cpp  activeserver.h  mirco_active.cpp  mirco_active.h
async_net/: CMakeLists.txt  async_net.h  async_service.cpp  async_service.h  buff_pool.cpp  buff_pool.h  error_code.h  no_blocking_pool.h  read_buff_pool.cpp  read_bufff_pool.h  simple_pool.h  sock_addr.cpp  sock_addr.h  sock_buff.cpp  sock_buff.h  socket.cpp  socket.h  socket_base.cpp  socket_base.h  socket_pool.cpp  socket_pool.h  write_buff_pool.cpp  write_buff_pool.h
async_net/linux/: .cproject  .project  async_service_linux.cpp  socket_base_linux.cpp  socket_base_linux.h
async_net/win32/: Overlapped.cpp  Overlapped.h  async_service_win32.cpp  base_socket_win32.cpp  base_socket_win32.h  iocp_impl.cpp  iocp_impl.h  socket_base_win32.cpp  socket_base_win32.h  winhdef.cpp  winhdef.h
async_net/win32/.svn/: all-wcprops  entries
async_net/win32/.svn/text-base/: Overlapped.cpp.svn-base  Overlapped.h.svn-base  base_socket_win32.cpp.svn-base  base_socket_win32.h.svn-base  iocp_impl.cpp.svn-base  iocp_impl.h.svn-base  winhdef.h.svn-base
container/: concurrent_interval_table.h  concurrent_queue.h  msque.h  no_blocking_pool.h  optimistic_queue.h  ringque.h  swapque.h
delete/: chunk.h  mempage_alloc.cpp  memtools.h  mirco_mempage_alloc.cpp  optimistic_queue.h  xorlist.h
detail/: strtools.cpp  strtools.h  tools.c  tools.h  wait_any.cpp  wait_any.h
exception/: exception.h
pool/: angmalloc.cpp  chunk.cpp  chunk.h  main.cpp  mempage_heap.cpp  (+3 more)
test/: CMakeLists.txt  async_net_test_client.cpp  async_net_test_server.cpp  interval_table_test.cpp  msgh.h  optimistic_queue_test.cpp  queue_test.cpp  ringque.cpp  smart_ptr_test.cpp  virmemtext.cpp
(+26 files in other folders)
